Regression: Sculpting a shapekey results in new shapekeys not being based on the basis shapekey #126074

Closed
opened 2024-08-08 04:49:01 +02:00 by kursad k · 14 comments
Member

System Information
Operating system: Win 11
Graphics card: RTX 2070

Blender Version
Broken: 4035f2fe9c
Broken: 4.3
Worked: 4.2

Short description of error
Sculpting a shapekey results in new shapekeys not being based on the basis shapekey

Exact steps for others to reproduce the error
suzanne
add a shape key, set to 1.0
sculpt mode, make some changes
object mode
add a shape key , set to 1.0
the result is multiplied

suzanne
add a shape key, set to 1.0
edit mode, make some changes
object mode
add a shape key , set to 1.0
the result is not multiplied

**System Information** Operating system: Win 11 Graphics card: RTX 2070 **Blender Version** Broken: 4035f2fe9c0c Broken: 4.3 Worked: 4.2 **Short description of error** Sculpting a shapekey results in new shapekeys not being based on the basis shapekey <video src="/attachments/bf1dca2a-89f6-4b7b-b1e6-2aa459615d2c" title="blender_shRpl9g1Ko.mp4" controls></video> **Exact steps for others to reproduce the error** suzanne add a shape key, set to 1.0 sculpt mode, make some changes object mode add a shape key , set to 1.0 the result is multiplied suzanne add a shape key, set to 1.0 edit mode, make some changes object mode add a shape key , set to 1.0 the result is not multiplied
kursad k added the
Type
Report
Severity
Normal
Status
Needs Triage
labels 2024-08-08 04:49:02 +02:00
Member

Can confirm in that file, but cant repro from scratch, needs a bit more investigation.
Do you have steps to repro from scratch?

Can confirm in that file, but cant repro from scratch, needs a bit more investigation. Do you have steps to repro from scratch?
Contributor

From the looks of it 'from_mix' is True when pressing the button, but should be False. Do you have any addons that might be replacing that panel by any chance?

From the looks of it 'from_mix' is True when pressing the button, but should be False. Do you have any addons that might be replacing that panel by any chance?
Member

@nickberckley : dont think it is an addon, happens locally here, too with provided file and 'from_mix' id False

image

@nickberckley : dont think it is an addon, happens locally here, too with provided file and 'from_mix' id False ![image](/attachments/3fecb928-2d73-43e9-909f-38cda0459f6f)
Philipp Oeser changed title from Adding a new shapekey doubles the effect to Adding a new shapekey doubles the effect in particular file 2024-08-08 11:20:36 +02:00
Member

Still needs more investigation, but for this file, I will confirm the issue

@kursadk : if you could repro from scratch, this would still be much appreciated

Still needs more investigation, but for this file, I will confirm the issue @kursadk : if you could repro from scratch, this would still be much appreciated
Philipp Oeser added
Module
Modeling
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-08-08 11:22:02 +02:00
Contributor

I can confirm on that object in that file, but creating Suzanne from scratch I can't. Seems to be something gone wrong with object

I can confirm on that object in that file, but creating Suzanne from scratch I can't. Seems to be something gone wrong with object
Member

Seems to be related to #88759 / #67185

Same workaround as mentioned here works btw. #88759 (comment)

Seems to be related to #88759 / #67185 Same workaround as mentioned here works btw. https://projects.blender.org/blender/blender/issues/88759#issuecomment-214190
Author
Member

That file was from scratch. I went ahead and set the scene to factory defaults, did the same steps and I am still having the same problem.

Still needs more investigation, but for this file, I will confirm the issue

@kursadk : if you could repro from scratch, this would still be much appreciated

That file was from scratch. I went ahead and set the scene to factory defaults, did the same steps and I am still having the same problem. > Still needs more investigation, but for this file, I will confirm the issue > > @kursadk : if you could repro from scratch, this would still be much appreciated
Author
Member

@lichtwerk @nickberckley

I traced it back to the sculpt mode at least it seems that way for now. The shapekey modification in the bug file was done in sculpt mode. This seems like a real bug to me rather than a usage issue.

suzanne
add a shape key, set to 1.0
sculpt mode, make some changes
object mode
add a shape key , set to 1.0
the result is multiplied

suzanne
add a shape key, set to 1.0
edit mode, make some changes
object mode
add a shape key , set to 1.0
the result is not multiplied

@lichtwerk @nickberckley I traced it back to the sculpt mode at least it seems that way for now. The shapekey modification in the bug file was done in sculpt mode. This seems like a real bug to me rather than a usage issue. suzanne add a shape key, set to 1.0 sculpt mode, make some changes object mode add a shape key , set to 1.0 the result is multiplied suzanne add a shape key, set to 1.0 edit mode, make some changes object mode add a shape key , set to 1.0 the result is not multiplied
Author
Member

Please see the video

Please see the video <video src="/attachments/bf1dca2a-89f6-4b7b-b1e6-2aa459615d2c" title="blender_shRpl9g1Ko.mp4" controls></video>
Contributor

Oof, that's a high priority then imho

Oof, that's a high priority then imho
Iliya Katushenock added the
Interest
Sculpt, Paint & Texture
label 2024-08-08 18:45:18 +02:00
Member

Yeah, can confirm now. Will update the report description

Yeah, can confirm now. Will update the report description
Philipp Oeser changed title from Adding a new shapekey doubles the effect in particular file to Sculpting a shapekey results in new shapekeys not being based on the basis shapekey 2024-08-08 19:08:30 +02:00
Philipp Oeser added this to the 4.3 milestone 2024-08-08 19:11:18 +02:00
Iliya Katushenock changed title from Sculpting a shapekey results in new shapekeys not being based on the basis shapekey to Regression: Sculpting a shapekey results in new shapekeys not being based on the basis shapekey 2024-08-08 19:11:49 +02:00
Sean Kim self-assigned this 2024-08-08 20:02:18 +02:00
Member

I'll look into this

I'll look into this
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-08-09 22:34:54 +02:00
Author
Member

This also explains why adding shapekeys when the multires modifier is enabled was causing the classic MR mesh blowups and spikies given the modifcation was done on the actual mesh data not the shapekey which is something the MR modifier hates to deal with.

This also explains why adding shapekeys when the multires modifier is enabled was causing the classic MR mesh blowups and spikies given the modifcation was done on the actual mesh data not the shapekey which is something the MR modifier hates to deal with.
Member

I don't think this is related to multires sculpting actually. The mistake in the recently refactored code didn't apply to the multires code paths.

I don't think this is related to multires sculpting actually. The mistake in the recently refactored code didn't apply to the multires code paths.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#126074
No description provided.